--- a/src/index.html
+++ b/src/index.html
@@ -82,10 +82,10 @@
             <h3 class="font-family-opensans color-white bg-brown margin-top-100 margin-bottom-0 font-size-16 line-height-160 to-upper-case">как проявляется</h3>
             <div class="flex-row">
                 <div class="col">
-                    <p>Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.</p>
+                    <p class="margin-bottom-0">Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.</p>
                 </div>
                 <div class="col">
-                    <p>Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.</p>
+                    <p class="margin-bottom-0">Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.</p>
                 </div>
             </div>
         </div>
@@ -128,10 +128,10 @@
                 <h3 class="font-family-opensans color-white bg-brown margin-top-100 margin-bottom-0 font-size-16 line-height-160 to-upper-case">как проявляется</h3>
                 <div class="flex-row">
                     <div class="col">
-                        <p>Часто это искажение настигает нас, когда нужно решение проблемы и… о! Мы как раз только что решили подобную проблему! Давайте использовать это же решение, потому что оно сработало, и мы помним как!</p>
+                        <p class="margin-bottom-0">Часто это искажение настигает нас, когда нужно решение проблемы и… о! Мы как раз только что решили подобную проблему! Давайте использовать это же решение, потому что оно сработало, и мы помним как!</p>
                     </div>
                     <div class="col">
-                        <p>Вы замечаете, что пользуетесь теми же рабочими методиками раз за разом? Если да, возможно, вы смотрите на разные проблемы под одним и тем же углом.</p>
+                        <p class="margin-bottom-0">Вы замечаете, что пользуетесь теми же рабочими методиками раз за разом? Если да, возможно, вы смотрите на разные проблемы под одним и тем же углом.</p>
                     </div>
                 </div>
             </div>
@@ -151,10 +151,10 @@
                 <h3 class="font-family-opensans color-brown bg-white margin-top-100 margin-bottom-20 font-size-16 line-height-160 to-upper-case">как проявляется</h3>
                 <div class="flex-row">
                     <div class="col">
-                        <p class="color-white">Вы когда-нибудь откладывали написание теста? Ловили себя на использовании клавиш-стрелок в Vim? Поздравляю, у вас наблюдается гиперболическое обесценивание.</p>
+                        <p class="color-white margin-bottom-0">Вы когда-нибудь откладывали написание теста? Ловили себя на использовании клавиш-стрелок в Vim? Поздравляю, у вас наблюдается гиперболическое обесценивание.</p>
                      </div>
                     <div class="col">
-                        <p class="color-white">Немедленная выгода от использования чего-то быстродоступного значительно смягчает боль, которую нужно перетерпеть, чтобы усвоить правильный синтаксис для перемещения на нужную строчку. Но как только вы поймёте как перемещаться быстрее, выгода в будующем намного выше. В итоге вы сохраните много времени.</p>
+                        <p class="color-white margin-bottom-0">Немедленная выгода от использования чего-то быстродоступного значительно смягчает боль, которую нужно перетерпеть, чтобы усвоить правильный синтаксис для перемещения на нужную строчку. Но как только вы поймёте как перемещаться быстрее, выгода в будующем намного выше. В итоге вы сохраните много времени.</p>
                     </div>
                 </div>
             </div>
@@ -174,11 +174,11 @@
                 <h3 class="font-family-opensans color-white bg-brown margin-top-100 margin-bottom-0 font-size-16 line-height-160 to-upper-case">как проявляется</h3>
                 <div class="flex-row">
                     <div class="col">
-                        <p class="padding-5">Одно из искажений, которое должно признать большинство из нас. И менеджеры проекта, и сами пользователи продукта — все склонны ставить сроки, в которые невозможно закончить запланированное.</p>
+                        <p class="margin-bottom-0">Одно из искажений, которое должно признать большинство из нас. И менеджеры проекта, и сами пользователи продукта — все склонны ставить сроки, в которые невозможно закончить запланированное.</p>
                     </div>
                     <div class="col">
-                        <p>Это отлично выражается в старом афоризме:</p>
-                        <p>Первые 90% готового кода отнимают первые 90% времени разработчика. Оставшиеся 10% отнимают вторые 90% времени разработки.</p>
+                        <p class="margin-bottom-0">Это отлично выражается в старом афоризме:</p>
+                        <p class="margin-bottom-0">Первые 90% готового кода отнимают первые 90% времени разработчика. Оставшиеся 10% отнимают вторые 90% времени разработки.</p>
                     </div>
                 </div>
             </div>
