remove flex and add text-align-center

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
         </div>
     </header>
     <main>
-        <section class="flex mb-minus-200 pb-100"> 
+        <section class="text-align-center mb-minus-200 pb-100"> 
             <h2 class="center margin-top-100 font-weight-400 padding-bottom-0 margin-bottom-15">Что же это такое,<br><span class="color-basic">когнитивные искажения?</span>
             </h2>
             <p class="margin-bottom-30">Что такое когнитивные искажения. Petrovna Channel</p>
