remove margin-bottom-30

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
         <section class="text-align-center mb-minus-200 pb-100"> 
             <h2 class="center margin-top-100 font-weight-400 padding-bottom-0 margin-bottom-15">Что же это такое,<br><span class="color-basic">когнитивные искажения?</span>
             </h2>
-            <p class="margin-bottom-30">Что такое когнитивные искажения. Petrovna Channel</p>
+            <p>Что такое когнитивные искажения. Petrovna Channel</p>
             <iframe class="video-filter border-0" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" allowfullscreen></iframe>
         </section>
         <div id="navigation" class="bg-basic-dark padding-top-100 ">
