add text-align-center to footer instead of flex

--- a/src/index.html
+++ b/src/index.html
@@ -185,11 +185,11 @@
         </section>
     </main>
     <footer>
-        <div class="flex">
+        <div>
             <div class="container margin-top-100 bg-basic-dark">
                 <div class="flex-row-footer">
                     <div class="col">
-                        <h3 class="color-white">Хотите узнать больше?<br>Подпишитесь на обновления</h3>
+                        <h3 class="color-white padding-bottom-55">Хотите узнать больше?<br>Подпишитесь на обновления</h3>
                     </div>
                     <div class="col">
                         <form action="#">
