--- a/src/index.html
+++ b/src/index.html
@@ -185,7 +185,7 @@
         </section>
     </main>
     <footer>
-        <div>
+        <div class="margin-top-100">
             <div class="container margin-top-100 bg-basic-dark">
                 <div class="flex-row-footer">
                     <div class="col">
