add margin-top-100 to footer tag

--- a/src/index.html
+++ b/src/index.html
@@ -184,7 +184,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="margin-top-100">
         <div class="margin-top-100">
             <div class="container margin-top-100 bg-basic-dark">
                 <div class="flex-row-footer">
