add margin to footer and delete margin from container

--- a/src/index.html
+++ b/src/index.html
@@ -185,8 +185,7 @@
         </section>
     </main>
     <footer class="margin-top-100">
-        <div class="margin-top-100">
-            <div class="container margin-top-100 bg-basic-dark">
+            <div class="container bg-basic-dark">
                 <div class="flex-row-footer">
                     <div class="col">
                         <h3 class="color-white padding-bottom-55">Хотите узнать больше?<br>Подпишитесь на обновления</h3>
@@ -208,7 +207,6 @@
                 <p class="color-black text-align-center font-size-14">По материалам статьи<a href="https://medium.com/hackernoon/cognitive-biases-in-programming-5e937707c27b" class="decor-19"> Yash Ranadive Cognitive Biases in Programming</a></p>
                 <p class="color-black text-align-center font-size-14"><a href="http://ru.hexlet.io/my" class="decor-19">Курсы программирования Hexlet</a></p>
             </div>
-        </div>
     </footer>
 </body>
 </html>
