--- a/src/index.html
+++ b/src/index.html
@@ -185,7 +185,8 @@
         </section>
     </main>
     <footer class="margin-top-100">
-            <div class="container bg-basic-dark">
+        <div>
+            <div class="container margin-top-100 bg-basic-dark">
                 <div class="flex-row-footer">
                     <div class="col">
                         <h3 class="color-white padding-bottom-55">Хотите узнать больше?<br>Подпишитесь на обновления</h3>
@@ -194,7 +195,7 @@
                         <form action="#">
                             <label for="mail" class="color-white"> Электронная почта</label><br>
                             <div class="display-flex">
-                            <input id="mail" type="text" placeholder="Ваша электронная почта">
+                            <input id="mail" type="email" placeholder="Ваша электронная почта">
                             <button class="hover"></button>
                             </div>
                         </form>
@@ -204,9 +205,10 @@
             </div>
             <div class="margin-footer ">
                 <p class="color-black text-align-center font-size-14">© 2023 Zakir Khunkaev</p>
-                <p class="color-black text-align-center font-size-14">По материалам статьи<a href="https://medium.com/hackernoon/cognitive-biases-in-programming-5e937707c27b" class="decor-19"> Yash Ranadive Cognitive Biases in Programming</a></p>
-                <p class="color-black text-align-center font-size-14"><a href="http://ru.hexlet.io/my" class="decor-19">Курсы программирования Hexlet</a></p>
+                <p class="color-black text-align-center font-size-14">По материалам статьи<a href="https://medium.com/hackernoon/cognitive-biases-in-programming-5e937707c27b"> Yash Ranadive Cognitive Biases in Programming</a></p>
+                <p class="color-black text-align-center font-size-14"><a href="http://ru.hexlet.io/my" class="margin-bottom-111">Курсы программирования Hexlet</a></p>
             </div>
+        </div>
     </footer>
 </body>
 </html>
