--- a/src/index.html
+++ b/src/index.html
@@ -184,8 +184,8 @@
             </div>
         </section>
     </main>
-    <footer class="margin-top-100">
-        <div>
+    <footer>
+        <div class="flex">
             <div class="container margin-top-100 bg-basic-dark">
                 <div class="flex-row-footer">
                     <div class="col">
@@ -206,7 +206,7 @@
             <div class="margin-footer ">
                 <p class="color-black text-align-center font-size-14">© 2023 Zakir Khunkaev</p>
                 <p class="color-black text-align-center font-size-14">По материалам статьи<a href="https://medium.com/hackernoon/cognitive-biases-in-programming-5e937707c27b"> Yash Ranadive Cognitive Biases in Programming</a></p>
-                <p class="color-black text-align-center font-size-14"><a href="http://ru.hexlet.io/my" class="margin-bottom-111">Курсы программирования Hexlet</a></p>
+                <p class="color-black text-align-center font-size-14"><a href="http://ru.hexlet.io/my" >Курсы программирования Hexlet</a></p>
             </div>
         </div>
     </footer>
