--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
                     <h3 class="font-weight-400">Ошибка планирования</h3>
                     <p class="margin-0 color-dark padding-top-16">Неправильно рассчитывать время необходимое для завершения задачи.</p>
                 </a>
-        </nav>
+            </nav>
         </div>
         <section id="ikea-effect" class="page-header background-light">
             <div class="container">
@@ -185,11 +185,11 @@
         </section>
     </main>
     <footer>
-        <div class="flex">
+        <div>
             <div class="container margin-top-100 bg-basic-dark">
                 <div class="flex-row-footer">
                     <div class="col">
-                        <h3 class="color-white padding-bottom-55">Хотите узнать больше?<br>Подпишитесь на обновления</h3>
+                        <h3 class="color-white font-weight-400 padding-bottom-55">Хотите узнать больше?<br>Подпишитесь на обновления</h3>
                     </div>
                     <div class="col">
                         <form action="#">
@@ -206,9 +206,9 @@
             <div class="margin-footer ">
                 <p class="color-black text-align-center font-size-14">© 2023 Zakir Khunkaev</p>
                 <p class="color-black text-align-center font-size-14">По материалам статьи<a href="https://medium.com/hackernoon/cognitive-biases-in-programming-5e937707c27b"> Yash Ranadive Cognitive Biases in Programming</a></p>
-                <p class="color-black text-align-center font-size-14"><a href="http://ru.hexlet.io/my" >Курсы программирования Hexlet</a></p>
+                <p class="color-black text-align-center font-size-14"><a href="http://ru.hexlet.io/my"  class="padding-bottom-111">Курсы программирования Hexlet</a></p>
             </div>
-        </div>
+        </div>    
     </footer>
 </body>
 </html>
