--- a/src/index.html
+++ b/src/index.html
@@ -185,28 +185,28 @@
         </section>
     </main>
     <footer>
-        <div>
-            <div class="container margin-top-100 bg-basic-dark">
-                <div class="flex-row-footer">
-                    <div class="col">
-                        <h3 class="color-white font-weight-400 padding-bottom-55">Хотите узнать больше?<br>Подпишитесь на обновления</h3>
+        <div class="footer-container">
+            <div class="footer-flex-container margin-bottom-76 text-align-left bg-basic-dark">
+                <div class="footer-flex-item padding-55">
+                    <h2 class="h3 margin-0 color-white">Хотите узнать больше?<br>Подпишитесь на обновления</h3>
                     </div>
-                    <div class="col">
-                        <form action="#">
-                            <label for="mail" class="color-white"> Электронная почта</label><br>
-                            <div class="display-flex">
-                            <input id="mail" type="email" placeholder="Ваша электронная почта">
-                            <button class="hover"></button>
+                    <div class="footer-flex-item padding-right-55">
+                        <form action="#" method="post">
+                            <label for="mail" class="email-label color-white margin-bottom-9"> Электронная почта</label>
+                            <div class="flex-container-row">
+                                <input class="email-input" id="mail" type="email" placeholder="Ваша электронная почта">
+                                <button class="button-submit bg-basic"></button>
                             </div>
                         </form>
-                        <p class="font-size-12 color-white line-height-160">Подписываясь вы принимаете <a href="#" class="color-white">правила сервиса</a></p>
+                        <small class="font-size-12 color-white line-height-160">Подписываясь вы принимаете
+                             <a href="#" class="color-white">правила сервиса</a>
+                        </small>
                     </div>
                 </div>
-            </div>
-            <div class="margin-footer ">
-                <p class="color-black text-align-center font-size-14">© 2023 Zakir Khunkaev</p>
-                <p class="color-black text-align-center font-size-14">По материалам статьи<a href="https://medium.com/hackernoon/cognitive-biases-in-programming-5e937707c27b"> Yash Ranadive Cognitive Biases in Programming</a></p>
-                <p class="color-black text-align-center font-size-14"><a href="http://ru.hexlet.io/my"  class="padding-bottom-111">Курсы программирования Hexlet</a></p>
+            <div class="text-align-center font-size-14 ">
+                <p class="color-black">© 2023 Zakir Khunkaev</p>
+                <p class="color-black">По материалам статьи<a class="color-blue" href="https://medium.com/hackernoon/cognitive-biases-in-programming-5e937707c27b"> Yash Ranadive Cognitive Biases in Programming</a></p>
+                <p class="color-black"><a href="http://ru.hexlet.io/my" class="color-blue">Курсы программирования Hexlet</a></p>
             </div>
         </div>    
     </footer>
