removing redundant classes

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
                 <a class="card padding-24 hover" href="#premature-optimization">
                     <span class="num-style">2</span>
                     <h3 class="font-weight-400">Преждевременная оптимизация</h3>
-                    <p class="margin-0 color-dark padding-top-16">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
+                    <p class="margin-0 color-dark ">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
                 </a>
                 <a class="card padding-24 hover height-348" href="#distortion-of-novelty">
                     <span class="num-style">3</span>
