--- a/src/index.html
+++ b/src/index.html
@@ -188,7 +188,7 @@
         <div class="footer-container">
             <div class="footer-flex-container margin-bottom-76 text-align-left bg-basic-dark">
                 <div class="footer-flex-item padding-55">
-                    <h2 class="h3 margin-0 color-white">Хотите узнать больше?<br>Подпишитесь на обновления</h2>
+                    <h2 class="h3 margin-0 font-weight-400 color-white">Хотите узнать больше?<br>Подпишитесь на обновления</h2>
                     </div>
                     <div class="footer-flex-item padding-right-55">
                         <form action="#" method="post">
