--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="./styles/style.css">
     </head>
     <body >
-        <header class="page-header background-light">
+        <header class="page-header bg-light">
             <div class="container">
                 <img class="img-main" src="./images/main.png" alt="hexlet sitting with laptop and working on project">
                 <h1 class="margin-top-0 margin-bottom-185 font-weight-400">
@@ -66,7 +66,7 @@
                     </a>
                 </nav>
             </div>
-            <section id="ikea-effect" class="page-header background-light">
+            <section id="ikea-effect" class="page-header bg-light">
                 <div class="container">
                     <div class="flex-row">
                         <div class="col">
@@ -112,7 +112,7 @@
                     </div>
                 </div>
             </section>
-            <section id="distortion-of-novelty" class="page-header background-light">
+            <section id="distortion-of-novelty" class="page-header bg-light">
                 <div class="container">
                     <div class="flex-row">
                         <div class="col">
@@ -158,7 +158,7 @@
                     </div>
                 </div>
             </section>
-            <section id="errors-in-planning" class="page-header background-light">
+            <section id="errors-in-planning" class="page-header bg-light">
                 <div class="container">
                     <div class="flex-row">
                         <div class="col">
