delete class height-348

--- a/src/index.html
+++ b/src/index.html
@@ -49,17 +49,17 @@
                         <h3 class="font-weight-400">Преждевременная оптимизация</h3>
                         <p class="margin-0 color-dark ">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
                     </a>
-                    <a class="card padding-24 hover height-348" href="#distortion-of-novelty">
+                    <a class="card padding-24 hover" href="#distortion-of-novelty">
                         <span class="num-style">3</span>
                         <h3 class="font-weight-400">Искажение новизны</h3>
                         <p class="margin-0 color-dark padding-top-16" >Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
                     </a>
-                    <a class="card padding-24 hover height-348" href="#hyperbolic-depreciation">
+                    <a class="card padding-24 hover" href="#hyperbolic-depreciation">
                         <span class="num-style">4</span>
                         <h3 class="font-weight-400">Гиперболическое обесценивание</h3>
                         <p class="margin-0 color-dark padding-top-16">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
                     </a>
-                    <a class="card padding-24 hover height-348" href="#errors-in-planning">
+                    <a class="card padding-24 hover" href="#errors-in-planning">
                         <span class="num-style">5</span>
                         <h3 class="font-weight-400">Ошибка планирования</h3>
                         <p class="margin-0 color-dark padding-top-16">Неправильно рассчитывать время необходимое для завершения задачи.</p>
