--- a/src/index.html
+++ b/src/index.html
@@ -184,7 +184,7 @@
             </section>
         </main>
         <footer>
-            <div class="footer-container">
+            <div class="container">
                 <div class="footer-flex-container margin-bottom-76 text-align-left bg-basic-dark">
                     <div class="footer-flex-item padding-55">
                         <h2 class="h3 margin-0 font-weight-400 color-white">Хотите узнать больше?<br>Подпишитесь на обновления</h2>
